fix: wrong flex align on ul + ul footer right

--- a/src/modules/Common/containers/Footer.module.css
+++ b/src/modules/Common/containers/Footer.module.css
@@ -42,7 +42,7 @@
       }
 
       & + ul {
-        flex-direction: row-reverse;
+        justify-content: flex-end;
         margin-top: 1rem;
       }
     }
